@@ -15,3 +15,8 @@ CREATE TABLE trends (
 update triggers set description=replace(description,'%s','{HOSTNAME}');
 update actions set subject=replace(subject,'%s','{HOSTNAME}');
 update actions set message=replace(message,'%s','{HOSTNAME}');
+
+alter table sysmaps_links add  drawtype_off	int(4)		DEFAULT '0' NOT NULL;
+alter table sysmaps_links add  color_off	varchar(32)	DEFAULT 'Black' NOT NULL;
+alter table sysmaps_links add  drawtype_on	int(4)		DEFAULT '0' NOT NULL;
+alter table sysmaps_links add  color_on		varchar(32)	DEFAULT 'Dark Red' NOT NULL;
